# embassy-esp32-fs-mcore-f8a2m1

./: Cargo.toml  README.md
.cargo/: config.toml
src/: client.rs  dbglog.rs  lib.rs  parser.rs  types.rs  util.rs
